--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -22,5 +22,5 @@ exception.auth.invalid.refresh.token=Invalid refresh token
 exception.auth.expired.refresh.token=Refresh token was expired
 
 #User
-exception.user.not.found.username=User not found with this username: {0}
+exception.user.not.found.email=User not found with this email: {0}
 exception.user.not.found.id=User not found with id: {0}
